src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__local_declaration_without_identifier.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        {\n            var 1;\n        }\n        \")"
---
stderr:
Error: Parse error
   ╭─[<unknown>:3:2]
   │
 3 │             var 1;
   │                 ┬  
   │                 ╰── Expected identifier
───╯


